--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">fiap_1tdsg_gps_permissao_mapa</string>
     <string name="action_settings">Settings</string>
     <string name="sem_gps_nao_rola">Sem GPS não rola</string>
+    <string name="busca">restaurantes</string>
 </resources>
